[project]
name = "spherical-memory-mcp"
version = "0.2.0"
description = "Spherical Network Label Memory System - MCP Server for AI Agent Memory"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Qian Maoyuan", email = "462353540@qq.com"},
]
keywords = ["mcp", "memory", "agent", "llm", "ai", "spherical-memory", "gravity-link"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/NeverDrunkMasterQian/spherical-memory-mcp"
Repository = "https://github.com/NeverDrunkMasterQian/spherical-memory-mcp"
Issues = "https://github.com/NeverDrunkMasterQian/spherical-memory-mcp/issues"

[project.optional-dependencies]
embedding = [
    "sentence-transformers>=2.2.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
spherical-memory = "spherical_memory.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spherical_memory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
